exports[`App mapDispatchToProps should handle onChange 1`] = `
Array [
  Array [
    Object {
      "authtoken": "something",
      "type": "brojects/action/SET_AUTHTOKEN",
    },
  ],
]
`;

exports[`App mapDispatchToProps should handle onChangeRepo 1`] = `
Array [
  Array [
    Object {
      "repoId": 1234,
      "type": "brojects/action/SET_CURRENT_REPO",
    },
  ],
  Array [
    Object {
      "repoFullName": undefined,
      "type": "brojects/action/GET_PROJECTS",
    },
  ],
]
`;

exports[`App mapDispatchToProps should handle onClick 1`] = `
Array [
  Array [
    Object {
      "type": "brojects/action/GET_REPOS",
    },
  ],
  Array [
    Object {
      "projectId": "324041",
      "type": "brojects/action/GET_COLUMNS",
    },
  ],
  Array [
    Object {
      "columnId": "575404",
      "type": "brojects/action/GET_CARDS",
    },
  ],
  Array [
    Object {
      "columnId": "575404",
      "type": "brojects/action/GET_COLUMN_DATA",
    },
  ],
]
`;

exports[`App mapDispatchToProps should handle onSubmit 1`] = `
Array [
  Array [
    Object {
      "columnId": "575404",
      "type": "brojects/action/GET_COLUMN_DATA",
    },
  ],
]
`;

exports[`App mapStateToProps should pass auth object 1`] = `
Object {
  "auth": Object {
    "some": "value",
  },
  "cards": undefined,
  "columnData": undefined,
  "columns": undefined,
  "currentRepo": undefined,
  "repos": Array [
    "value",
  ],
}
`;

exports[`App rendering renders without crashing 1`] = `
<section
  className="App">
  <Layout
    fixedHeader={true}>
    <Header
      waterfall={true}>
      <HeaderRow
        title="<BROJECTS>" />
      <p>
        Better Github projects
      </p>
    </Header>
    <Repo />
    <Content>
      <Auth />
    </Content>
  </Layout>
</section>
`;
